indexに画像追加

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -6,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="default.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="interaction.js"></script>
-  <title>映アニ!!</title>
+  <title>go○gleのモノマネ</title>
 </head>
 <body>
   <header class="header">
@@ -15,7 +14,7 @@
   <div class="container">
     <div class="bar"></div>
     <div class="form">
-      <div class="title">チェックボックスの模倣</div>
+      <div class="title">チェックボックスのモノマネしまーす</div>
 
       <div class="item _0">
         <div class="checkboxWrap">
@@ -54,6 +53,32 @@
 
     </div>
 
+    <ul>
+      <li>
+        <img src="./resources/f1.png" alt="">
+      </li>
+      <li>
+        <img src="./resources/f2.png" alt="">
+      </li>
+      <li>
+        <img src="./resources/f3.png" alt="">
+      </li>
+      <li>
+        <img src="./resources/f4.png" alt="">
+      </li>
+      <li>
+        <img src="./resources/f5.png" alt="">
+      </li>
+      <li>
+        <img src="./resources/f6.png" alt="">
+      </li>
+      <li>
+        <img src="./resources/f7.png" alt="">
+      </li>
+      <li>
+        <img src="./resources/f8.png" alt="">
+      </li>
+    </ul>
   </div>
 
   <footer>
